# ghost-delay

./: .gitignore  CMakeLists.txt  README.md
Source/: EnigmaFilter.h  FilmstripKnob.cpp  FilmstripKnob.h  GhostEngine.cpp  GhostEngine.h  GhostLookAndFeel.h  GhostRenderer.cpp  GhostRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  SelfCapture.h  SpectralDelay.cpp  SpectralDelay.h  SpectralFreeze.cpp  SpectralFreeze.h  SpectrumDisplay.cpp  SpectrumDisplay.h  WaveDisplay.h
Tests/: EngineStressTest.cpp
Tools/: DemoRender.cpp  FaceAnim.cpp  SnapshotMain.cpp
